<resources>
    <string name="invitation">Invitation</string>
    <string name="independence_day">Independence Day</string>
    <string name="republic_day">Republic Day</string>
    <string name="anniversary">Anniversary</string>
    <string name="congratulations">Congratulations</string>
    <string name="good_luck">Good Luck</string>
    <string name="happy_new_year">Happy New Year</string>
    <string name="happy_diwali">Happy Diwali</string>
    <string name="happy_holi">Happy Holi</string>
    <string name="merry_christmas">Merry Christmas</string>
    <string name="eid_mubarak">Eid Mubarak</string>
    <string name="make_my_own">Make my own</string>
    <string name="title">Title :</string>
    <string name="hint_inv_title">eg.Birthday Party</string>
    <string name="subtitle">Subtitle :</string>
    <string name="location">Location :</string>
    <string name="sersa_stadium_kharagpur">3rd floor, Atithi Guest House, Inda</string>
    <string name="date">Date :</string>
    <string name="_30_10_2022">30/10/2022</string>
    <string name="time">Time :</string>
    <string name="_05_30">05:30</string>
    <string name="am">AM</string>
    <string name="create">Create</string>
    <string name="sunday">Sunday</string>
    <string name="day">Day :</string>
    <string name="pm">PM</string>
    <string name="showlocation">5th floor, Atithi Guest House, Inda</string>
    <string name="birthday_party">Birthday party</string>
    <string name="shreya_s_14th_birthday">Shreya ki 14th birthday</string>
    <string name="inv_long_text1">Joyfully request the pleasure of your company at the</string>
    <string name="your_name">Your Name :</string>
    <string name="about">About</string>
    <string name="wish">Wishes</string>
    <string name="many_many_happy_returns_of_the_day">Many many happy returns of the day.</string>
    <string name="from">From :</string>
    <string name="tapan_aditya">Tapan Aditya</string>
    <string name="share">Share</string>
    <string name="wishin">WishIN</string>
    <string name="happy_birthday">Happy Birthday</string>
    <string name="quotation">Quotation :</string>
    <string name="for_best_wishes_and_invitation">For best wishes and invitation</string>
</resources>