<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B2DFDB"

    tools:context=".ViewInvitationActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/invbg6"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tv_inv_note"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:paddingTop="110dp"
            android:text="@string/inv_long_text1"
            android:textColor="#2E7D32"
            android:textSize="23sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_inv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/birthday_party"
            android:textColor="#EC407A"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_inv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="40dp"
            android:text="@string/shreya_s_14th_birthday"
            android:textColor="#43A047"
            android:textSize="22sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_inv_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:text="@string/sunday"
                android:textColor="#3949AB"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_inv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/_30_10_2022"
                android:textColor="#3949AB"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_inv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/_05_30"
                android:textColor="#3949AB"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_inv_ampm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/am"
                android:textColor="#303F9F"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_inv_location"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/showlocation"
            android:textAlignment="center"
            android:textColor="#3949AB"
            android:textSize="18sp" />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="#E8F5E9"
        android:onClick="unavaliable"
        android:text="@string/share"
        android:textColor="#43A047"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>