<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WishInputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgg5"

        android:orientation="vertical"
        android:paddingVertical="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/title"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_wish_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"

                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:background="@drawable/roundcorner"
                android:hint="@string/happy_birthday"
                android:textColorHint="#D8D5D5"
                android:autofillHints="Event Name"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quotation"
                android:gravity="center"
                android:textAllCaps="true"
                android:padding="10dp"
                android:textSize="15sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/et_wish_quot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="15sp"
                android:background="@drawable/roundcorner"
                android:hint="@string/many_many_happy_returns_of_the_day"
                android:textColorHint="#D8D5D5"
                android:autofillHints="Event Name"
                android:inputType="text"  />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/from"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_wish_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:padding="10dp"

                android:gravity="center"
                android:textSize="15sp"
                android:background="@drawable/roundcorner"
                android:hint="@string/tapan_aditya"
                android:textColorHint="#D8D5D5"
                android:autofillHints="address"
                android:inputType="textPersonName" />

        </LinearLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:background="@drawable/rbbutton"
            android:onClick="sendWishInfo"
            android:padding="10dp"
            android:text="@string/create"
            android:textColor="@color/black"

            tools:ignore="UsingOnClickInXml">

        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>