<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".WishViewActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="620dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/wishbg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tv_wish_title"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="15dp"
            android:padding="10dp"
            android:text="@string/happy_birthday"
            android:textAlignment="center"
            android:textColor="#5C6BC0"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/tv_wish_quot"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="30dp"
            android:padding="10dp"
            android:text="@string/many_many_happy_returns_of_the_day"
            android:textAlignment="center"
            android:textColor="#AB47BC"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_wish_from"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/tapan_aditya"
            android:textAlignment="viewEnd"

            android:textColor="#5C6BC0"

            android:textSize="14sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:background="#E8EAF6"
        android:onClick="unavaliable"
        android:text="@string/share"
        android:textColor="#82868A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.322"
        tools:layout_editor_absoluteX="49dp" />
</androidx.constraintlayout.widget.ConstraintLayout>