<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/q"
        android:orientation="vertical"
        android:gravity="bottom"
        android:padding="20dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="20dp"
            android:text="@string/wishin"
            android:textAlignment="center"
            android:textColor="#F06292"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"
            android:paddingBottom="10dp"
            android:text="@string/for_best_wishes_and_invitation"
            android:textAlignment="center"
            android:textColor="#F06292"
            android:textSize="20sp"
            >

        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/rbbutton2"
            android:onClick="invitationInput"
            android:textStyle="italic"
            android:padding="20dp"
            android:text="@string/invitation"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/rbbutton2"
            android:onClick="sendWishInfo"
            android:textStyle="italic"
            android:padding="20dp"
            android:text="@string/wish"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="By Subhasish Aditya"

            android:textAlignment="center"
            android:textColor="#E57373"
            android:textSize="8sp">

        </TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>